--- a/package.json
+++ b/package.json
@@ -1,25 +1,27 @@
 {
   "name": "investmind-ai",
-  "private": true,
-  "version": "0.0.0",
-  "type": "module",
+  "version": "1.0.0",
+  "description": "InvestMind AI - Consultor de Investimentos Inteligente",
   "scripts": {
-    "dev": "vite",
-    "build": "vite build",
-    "preview": "vite preview"
+    "start": "parcel index.html",
+    "build": "parcel build index.html",
+    "apk:setup": "npm install @capacitor/core @capacitor/cli @capacitor/android",
+    "apk:build": "npm run build && npx cap add android && npx cap sync",
+    "apk:open": "npx cap open android"
   },
   "dependencies": {
     "react": "^19.2.3",
     "react-dom": "^19.2.3",
-    "recharts": "^3.5.1",
+    "lucide-react": "^0.344.0",
     "@google/genai": "^1.33.0",
-    "lucide-react": "^0.561.0",
-    "react-markdown": "^10.1.0"
+    "recharts": "^2.12.2",
+    "react-markdown": "^9.0.1",
+    "@capacitor/core": "^5.7.0",
+    "@capacitor/android": "^5.7.0"
   },
   "devDependencies": {
-    "@types/node": "^22.14.0",
-    "@vitejs/plugin-react": "^5.0.0",
-    "typescript": "~5.8.2",
-    "vite": "^6.2.0"
+    "@capacitor/cli": "^5.7.0",
+    "parcel": "^2.12.0",
+    "process": "^0.11.10"
   }
 }
