--- a/package.json
+++ b/package.json
@@ -16,10 +16,12 @@
     "@google/genai": "^1.33.0",
     "recharts": "^2.12.2",
     "react-markdown": "^9.0.1",
+    "crypto-js": "^4.2.0",
     "@capacitor/core": "^5.7.0",
     "@capacitor/android": "^5.7.0"
   },
   "devDependencies": {
+    "@types/crypto-js": "^4.2.2",
     "@capacitor/cli": "^5.7.0",
     "parcel": "^2.12.0",
     "process": "^0.11.10"
